# ckanext-datagov

./: MANIFEST.in  README.md  routes.py  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/datagov/: .plugin.py.swp  .view.py.swp  .views.py.swp  __init__.py  cli.py  controller.py  controllers.py  datagov.html  helpers.py  load_workflow.py  plugin.py  projects.csv  views.py  views.py.save.1  views.py.save.2  views.py.save.3
ckanext/datagov/assets/: app.js  app.js.save  script.js  webassets.yml
ckanext/datagov/assets/css/: datagov.css  datagov.css.save  datagov.css.save.1  fontawesome-all.min.css  qgis2web.css
ckanext/datagov/logic/: action.py  auth.py  schema.py  validators.py
ckanext/datagov/public/base/images/: 1-dataset-100-visualizations.png?w=640  dataset-cover.jpg?t=2020-09-26-10-01-12  url?sa=i  url?sa=i.1  wget-log  wget-log.1
ckanext/datagov/templates/: .projets.html.swp  base.html  footer.html  header.html  home.html  projects.html  projetcs.html
ckanext/datagov/templates/home/: index.html  layout1.html
ckanext/datagov/templates/home/snippets/: .promoted.html.swp  .resources.html.swp  catalog.html  news.html  promoted.html  resources.html
ckanext/datagov/templates/home/snippets/snippets/: catalog.html
ckanext/datagov/templates/package/: read_base.html  search.html
ckanext/datagov/templates/projects/: .index.html.swp  .indexhtml.swp  index.html  list.html
ckanext/datagov/templates/projects/projects1/: index.html  webassets.yml
ckanext/datagov/templates/projects/snippets/: boundaries.html
ckanext/datagov/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/datagov/tests/logic/: test_action.py  test_auth.py  test_validators.py
